# PrefIRL

./: .gitignore  ANALYSIS.md  README.md  RESULTS_nd100_example.md  RESULTS_sp500.md  aggregate_results.py  baselines.py  benchmark_expert.py  eval_best.py  eval_best_zz500.py  finalize.sh  finalize_sweep.sh  main.py  make_report.py  make_report_zz500.py  pb_irl_impl.md  pyproject.toml  run_all.sh  run_experiments.py  run_reproduce.sh  run_reproduce_hs300_resume.sh  run_reproduce_other_seed0.sh  run_sp500_seed1.sh  run_sp500_seed2.sh  run_zz500.sh  run_zz500_options.py  status_sp500.py
dataloader/: data_loader.py
dataset/: nd100_sector.csv  sp500_sector.csv  tw50_sector.csv
dataset/daily_stock_hs300/: 2018-01-24.csv  2018-01-30.csv  2018-01-31.csv  2018-02-01.csv  2018-02-02.csv  2018-02-05.csv  2018-02-06.csv  2018-02-07.csv  2018-02-08.csv  2018-02-09.csv  2018-02-12.csv  2018-02-13.csv  2018-02-14.csv  2018-02-22.csv  2018-02-23.csv  2018-02-26.csv  2018-02-27.csv  (+1662 more)
env/: portfolio_env.py
gen_data/: build_dataset.py  fetch_sectors.py  fetch_taiwan.py  generate_expert.py  generate_relation.py  train_predict_data.py
model/: model.py
policy/: policy.py
results/: all_metrics_sp500.csv  all_metrics_zz500.csv  baselines_curves_hs300.csv  baselines_curves_nd100.csv  baselines_curves_sp500.csv  baselines_curves_zz500.csv  baselines_metrics_hs300.csv  baselines_metrics_nd100.csv  baselines_metrics_sp500.csv  baselines_metrics_zz500.csv  expert_curves_sp500.csv  expert_metrics_sp500.csv
tests/: test_pb_irl.py
trainer/: irl_trainer.py  pb_irl.py  trainer.py
(+1783 files in other folders)
