[project]
name = "smartfolio"
version = "0.1.0"
description = "Reproduction of IJCAI-25 Heuristic-Guided IRL for Portfolio Optimization"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2",
    "pandas>=2.0,<2.2",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "scipy>=1.10",
    "tqdm",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
    "gym==0.26.2",
    "stable-baselines3==1.8.0",
    "cloudpickle>=2.2",
    "torch==2.2.2",
    "torch-geometric==2.5.3",
    "yfinance>=0.2.40",
    "lxml>=4.9",
    "html5lib",
    "pyarrow",
    "requests",
]

[tool.uv]
package = false
override-dependencies = ["gym==0.26.2"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
